add web Dockerfile

--- a/web/nginx/default.conf
+++ b/web/nginx/default.conf
@@ -11,7 +11,7 @@ server {
     }
 
      location /web/ {
-                    proxy_pass http://te.stormxing.com:8080/;
+            proxy_pass http://te.stormxing.com:8080/web/;
     }
 
     #error_page  404              /404.html;
