--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,7 @@
   },
   "proxy": {
     "/web": {
-      "target": "http://te.stormxing.com:8080",
+      "target": "http://eu.stormxing.com:8080",
       "secure": false,
       "changeOrign": true
     }
