--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,3 +3,5 @@ FROM nginx
 LABEL maintainer="stormxing@foxmail.com"
 
 COPY build/ /usr/share/nginx/html/
+
+COPY nginx/default.conf  /etc/nginx/conf.d/
