--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,5 +33,6 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile("mysql:mysql-connector-java")
+	compile("org.springframework.boot:spring-boot-devtools")
 	testCompile("junit:junit")
 }
