--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url = jdbc:mysql://eu.stormxing.com:3306/studioManagementSystem?useUnicode=true&characterEncoding=utf-8
-#spring.datasource.url = jdbc:mysql://localhost:3306/studioManagementSystem?useUnicode=true&characterEncoding=utf-8
+#spring.datasource.url = jdbc:mysql://eu.stormxing.com:3306/studioManagementSystem?useUnicode=true&characterEncoding=utf-8&&useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/studioManagementSystem?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
