--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -20,10 +20,11 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
+	mavenLocal() //1.优先查找本地maven库，性能最好
+	maven{//2.其次查找aliyun maven库
+		url'http://maven.aliyun.com/nexus/content/groups/public/'
+	}
 	mavenCentral()
-	jcenter()
-	maven { url "http://repo.spring.io/snapshot" }
-	maven { url "http://repo.spring.io/milestone" }
 }
 
 
@@ -33,6 +34,5 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile("mysql:mysql-connector-java")
-	compile("org.springframework.boot:spring-boot-devtools")
 	testCompile("junit:junit")
 }
