--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,7 @@
     "reqwest": "^2.0.5"
   },
   "proxy": {
-    "/web": {
+    "/api": {
       "target": "http://localhost:8080",
       "secure": false,
       "changeOrign": true
