--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,9 +1,5 @@
 .gradle
-/build/classes/
-/build/reports/
-/build/resources/
-/build/test-results/
-/build/tmp/
+build
 !gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
