--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,10 @@
-FROM jboss/base-jdk:8
+#origin Dockerfile: https://github.com/keeganwitt/docker-gradle/blob/64a348e79cbe0bc8acb9da9062f75aca02bf3023/jdk8/Dockerfile
+FROM gradle:4.7.0-jdk8
 
-COPY build/libs/backend-0.0.1-SNAPSHOT.jar /
+ADD . /home/gradle
 
-ENTRYPOINT ["java","-jar","/backend-0.0.1-SNAPSHOT.jar"]
+RUN gradle build
+
+WORKDIR /home/gradle/build/libs
+
+ENTRYPOINT ["java","-jar","backend-0.0.1-SNAPSHOT.jar"]
