--- a/web/nginx/default.conf
+++ b/web/nginx/default.conf
@@ -10,8 +10,8 @@ server {
         index  index.html index.htm;
     }
 
-     location /web/ {
-                    proxy_pass http://eu.stormxing.com:8080/;
+     location /web {
+        proxy_pass http://eu.stormxing.com:8080/;
     }
 
     #error_page  404              /404.html;
