修复nginx转发api路径

--- a/web/nginx/default.conf
+++ b/web/nginx/default.conf
@@ -10,7 +10,7 @@ server {
         index  index.html index.htm;
     }
 
-     location /web {
+     location /api {
         proxy_pass http://eu.stormxing.com:8080/;
     }
 
