--- a/web/nginx/default.conf
+++ b/web/nginx/default.conf
@@ -10,8 +10,8 @@ server {
         index  index.html index.htm;
     }
 
-     location /api {
-        proxy_pass http://eu.stormxing.com:8080/;
+     location /api/ {
+            proxy_pass http://eu.stormxing.com:8080/api/;
     }
 
     #error_page  404              /404.html;
@@ -46,3 +46,4 @@ server {
     #    deny  all;
     #}
 }
+
