change add to copy in Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 #origin Dockerfile: https://github.com/keeganwitt/docker-gradle/blob/64a348e79cbe0bc8acb9da9062f75aca02bf3023/jdk8/Dockerfile
 FROM gradle:4.7.0-jdk8
 
-ADD . /home/gradle
+COPY . /home/gradle
 
 RUN gradle build
 
