--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -3,6 +3,10 @@ buildscript {
 		springBootVersion = '2.0.1.RELEASE'
 	}
 	repositories {
+		mavenLocal() //1.优先查找本地maven库，性能最好
+		maven{//2.其次查找aliyun maven库
+			url 'http://maven.aliyun.com/nexus/content/groups/public/'
+		}
 		mavenCentral()
 	}
 	dependencies {
